# roadmarking-maintenance-robot

./: .gitignore  README.md
src/: frames.gv
src/rdl_robot_localization/: CMakeLists.txt  package.xml
src/rdl_robot_localization/launch/: localize.launch  localize_bag.launch  localize_gazebo.yaml
src/rdl_robot_msgs/: CMakeLists.txt  package.xml
src/rdl_robot_msgs/msg/: ImageWithPose.msg  ImageWithPoseArray.msg  InterestMarkingPoint.msg  InterestPointArray.msg  MarkingPoint.msg  PathMarking.msg
src/rdl_robot_vision/: CMakeLists.txt  package.xml
src/rdl_robot_vision/config/: IPM.rviz  IPM_view.rviz  rviz_marker.rviz
src/rdl_robot_vision/launch/: IPM_test.launch  mapa_puntos_interes.launch  test.launch
src/rdl_robot_vision/scripts/: config.py  ekf_node.py  ekf_node_imu.py  eval_marking_node.py  evaluar_desgaste_node.py  funciones.py  image_size_node.py  kine_functions.py  listener_node.py
src/rdl_robot_vision/src/: sync_ImagePose.py  toImagePose.py
src/rdl_robot_vision/tests/: configtest.py  generar_puntos_interes.py  interest_points.txt  kine_functions.py  publish_image.py  save_images.py  view_IPM_images.py  view_interests_points.py
src/rdl_trayectory_planning/: CMakeLists.txt  package.xml
src/rdl_trayectory_planning/config/: todo.rviz
src/rdl_trayectory_planning/launch/: remapeo_frames.launch  vision_planning.launch
src/rdl_trayectory_planning/scripts/: config_param.py  functions.py  trayectory_generation_node.py  trayectory_planning_node.py
src/rdl_trayectory_planning/src/: encoders_to_base_footprint.py  imu_to_base_footprint.py
src/rdl_trayectory_planning/test/: mostrar_trayectoria_final.py  trayectoria_generada.py
src/road_robot_description/: CMakeLists.txt  package.xml
src/road_robot_description/launch/: controller.launch  (+3 more)
src/road_robot_urdf_description/: CMakeLists.txt  package.xml
(+23 files in other folders)
