<?xml version="1.0"?>
<package format="2">
  <name>rdl_robot_vision</name>
  <version>0.0.0</version>
  <description>The rdl_robot_vision package</description>
  <maintainer email="jose.cabeza@utec.edu.pe">eliascm07</maintainer>
  <license>MIT</license>

  <author email="jose.cabeza@utec.edu.pe">Elias Cabeza</author>
  
  <!-- Dependencias de compilación y ejecución -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencias de paquetes ROS -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rdl_robot_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rdl_robot_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Dependencias de librerías externas -->
  <exec_depend>python3-opencv</exec_depend> <!-- OpenCV -->
  <exec_depend>python3-numpy</exec_depend>  <!-- Numpy -->
  <exec_depend>python3-shapely</exec_depend> <!-- Shapely -->
  <exec_depend>python3-ultralytics</exec_depend> <!-- Ultralytics -->

  <!-- Dependencias adicionales -->
  <build_export_depend>catkin</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Instrucciones para instalar dependencias del sistema -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
